--- a/app/assets/manage-kpi.html
+++ b/app/assets/manage-kpi.html
@@ -47,9 +47,9 @@
     </div>
     <div class="middle clearfix">
         <div class="left-category pull-left">
-            <ul class="manage-group">
+            <ul class="manage-group" id="manage-group-kpi">
                 <li><h3 class="no-margin">类别</h3></li>
-                <li class="active"><a href="">default</a></li>
+                <li class="active"><a href="">默认</a></li>
                 <li><a href="">entity1</a></li>
                 <li><a href="">entity2</a></li>
                 <li><a href="">entity3</a></li>
@@ -158,20 +158,25 @@
                     <th>目标值</th>
                     <th>单位</th>
                     <th>方向</th>
-                    <th>编辑</th>
-                    <th>删除</th>
+                    <th width="50px">计算型</th>
+                    <th width="50px" colspan="2">操作</th>
                 </tr>
                 <tr id="1">
-                    <td align="center">1</td>
-                    <td align="center">entity1</td>
+                    <td align="center" class="kpi-order-id">1</td>
+                    <td align="center" class="kpi-entity">entity1</td>
                     <td align="center">KPI 1</td>
-                    <td align="center" >desc</td>
+                    <td align="center">desc</td>
                     <td align="center">日</td>
-                    <td align="center">2000</td>
+                    <td align="center" class="kpi-target">2000</td>
                     <td align="center">$</td>
                     <td align="center">上升</td>
-                    <td align="center"><div class="manage-operate manage-operate-edit" date-belong="1" onclick="edit_kpiItem(event)"></div></td>
-                    <td align="center"><div class="manage-operate manage-operate-del" date-belong="1" onclick="remove_kpiItem()"></div></td>
+                    <td align="center">否</td>
+                    <td align="center"><div class="manage-operate manage-operate-edit" data-belong="1" onclick="edit_kpiItem(event)"></div>
+                        <a class="btn btn-success manage-operate-reverse  hide" data-belong="1" onclick="finish_editKPI(event)">完成</a>
+                    </td>
+                    <td align="center"><div class="manage-operate manage-operate-del" data-belong="1" onclick="remove_kpiItem(event)"></div>
+                        <a class="btn manage-operate-reverse  hide" id="cancel-edit-kpi" data-belong="1" onclick="cancel_editKPI(event)">取消</a>
+                    </td>
                 </tr>
             </table>
             <a class="btn manage-add-btn btn-primary pull-right" onclick="show_addBlock(event)" data-manage="kpi">添加KPI</a>
@@ -180,8 +185,8 @@
 
 </div>
 <script src="javascripts/jquery-1.8.2.min.js"></script>
-<script src="javascripts/highcharts.js"></script>
 <script src="javascripts/jquery-ui-1.10.3.custom.min.js"></script>
+<script src="javascripts/highcharts.js"></script>
 <script src="javascripts/bootstrap.min.js"></script>
 <script src="javascripts/brilliantech.base.js"></script>
 <script src="javascripts/brilliantech.railsepm.js"></script>
