--- a/app/assets/dashboard.html
+++ b/app/assets/dashboard.html
@@ -46,7 +46,7 @@
           <a class="db-add" > KPI视图</a>
         </div>
     </div>
-    <div class="addBlock " id="addBlock " data-state="off" style="display:none">
+    <div class="addBlock " id="addBlock " data-state="off" style="display:block">
         <h4 class="text-center">选择一种视图类型</h4>
         <div class="chooseChart-wrap clearfix">
             <div class="choose-db-item db-chart-line pull-left"><label>折线图</label></div>
