--- a/app/assets/Analytics.html
+++ b/app/assets/Analytics.html
@@ -91,6 +91,7 @@
 </div>
 <script src="javascripts/jquery-1.8.2.min.js"></script>
 <script src="javascripts/jquery-ui-1.10.3.custom.min.js"></script>
+<script src="javascripts/highcharts.js"></script>
 <script src="javascripts/bootstrap.min.js"></script>
 <script src="javascripts/brilliantech.base.js"></script>
 <script src="javascripts/brilliantech.railsepm.js"></script>
