--- a/app/assets/EntryId.html
+++ b/app/assets/EntryId.html
@@ -47,8 +47,8 @@
     <div class="middle clearfix">
         <label class="inline pull-left entryKPI-intervalMark" >KPI周期</label>
         <ul class="nav nav-tabs entry-nav-tabs" id="entry-date-type">
-            <li class="active"  data-type="day"><a href="#">日</a></li>
-            <li data-type="week"><a href="#" >周</a></li>
+            <li data-type="day"><a href="#">日</a></li>
+            <li class="active" data-type="week"><a href="#" >周</a></li>
             <li data-type="month"><a href="#" >月</a></li>
             <li data-type="quarter"><a href="#">季度</a></li>
             <li data-type="year"><a href="#">年</a></li>
