--- a/app/assets/manage-kpi.html
+++ b/app/assets/manage-kpi.html
@@ -131,17 +131,17 @@
                     <td valign="top">
                         <input type="checkbox" class="is-calcu-check" id="is-calcu-check" onclick="is_calcu()"/>
                         <div class="is-calcu-type clearfix" id="is-calcu-type" style="display:none">
-                            <select id="is-calcu-relate" class="calcuRelate-kpi" >
-                                <option data-order="1" selected="selected" > </option>
+                            <select id="is-calcu-relate" class="calcuRelate-kpi" onchange="select_calcuRelate()">
+                                <option data-order="1" class="empty-option" selected="selected" style="display:none"> </option>
                                 <option data-order="2">KPI 1</option>
                                 <option data-order="3">KPI 2</option>
                             </select>
-                            <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="1" disabled>+</a>
-                            <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="2">-</a>
-                            <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="3">x</a>
-                            <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="4">%</a>
-                            <input type="text" class="calcuType-input" id="calcuType=input" readonly="true"/>
-                            <a class="btn calcuType-clear" id="calcuType-clear">清空</a>
+                            <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="1" onclick="select_calcuMethod(event)">+</a>
+                            <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="2" onclick="select_calcuMethod(event)">-</a>
+                            <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="3" onclick="select_calcuMethod(event)">x</a>
+                            <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="4" onclick="select_calcuMethod(event)">%</a>
+                            <input type="text" class="calcuType-input" id="calcuType-input" readonly="true"/>
+                            <a class="btn calcuType-clear" id="calcuType-clear" onclick="calcuRelate_clear()">清空</a>
                         </div>
                     </td>
                 </tr>
