--- a/app/assets/Analytics.html
+++ b/app/assets/Analytics.html
@@ -54,12 +54,20 @@
 
         <div class="right-content pull-left" id="right-content">
             <div class="content-condition clearfix">
-                <div class="content-condition-part pull-left">
-                    <p class="text-center">KPI name</p>
-                    <select>
-                        <option>KPI 1</option>
-                        <option>KPI 2</option>
-                        <option>KPI 3</option>
+                <div class="content-condition-part content-condition-leftpart pull-left">
+                    <p class="text-center">KPI</p>
+                    <select class="pull-left conditionPart-entity" id="chart-entity">
+                        <option style="display:none" selected="selected" id="none-entity">选择观察组</option>
+                        <option id="entity1">entityGroup 1</option>
+                        <option id="entity2">entityGroup 2</option>
+                        <option id="entity3">entityGroup 3</option>
+                    </select>
+                    <span class="inline pull-left">-</span>
+                    <select class="pull-left" id="chart-kpi">
+                        <option style="display:none" selected="selected" id="none-kpi">选择KPI</option>
+                        <option id="kpi1">KPI 1</option>
+                        <option id="kpi2">KPI 2</option>
+                        <option id="kpi3">KPI 3</option>
                     </select>
                     <!--<label>compare to</label>-->
                     <!--<select>-->
@@ -70,8 +78,8 @@
                     <!--</select>-->
                 </div>
                 <div class="content-condition-part pull-right content-condition-rightpart">
-                    <p class="text-center">Time range</p>
-                    <input type="text" readonly="true" id="from" value="2013-7-1"/><span>to</span><input type="text" readonly="true" id="to" value="2013-7-7"/>
+                    <p class="text-center">时间范围</p>
+                    <input type="text" readonly="true" id="from" /><span>to</span><input type="text" readonly="true" id="to" />
                     <!--<label>compare to</label>-->
                     <!--<input type="text" readonly="true" id="compare-from"/><span>to</span><input type="text" readonly="true" id="compare-to"/>-->
                 </div>
@@ -81,7 +89,7 @@
                <a class="btn btn-mini btn-primary pull-right control-chart-btn" data-animation=false title="quarter">Q</a>
                <a class="btn btn-mini btn-primary pull-right control-chart-btn" data-animation=false title="month">M</a>
                <a class="btn btn-mini btn-primary pull-right control-chart-btn" data-animation=false title="week">W</a>
-               <a class="btn btn-mini btn-primary pull-right control-chart-btn control-btn-active" data-animation=false title="day">D</a>
+               <a class="btn btn-mini btn-primary pull-right control-chart-btn active" data-animation=false title="day">D</a>
            </div>
            <div id="container" class="analyze-chart">
            </div>
