wzx:change img path

--- a/app/assets/Analytics.html
+++ b/app/assets/Analytics.html
@@ -85,11 +85,11 @@
                 </div>
             </div>
            <div class="control-chart">
-               <a class="btn btn-mini btn-primary pull-right control-chart-btn control-chart-btn-last" data-animation=false title="year">Y</a>
-               <a class="btn btn-mini btn-primary pull-right control-chart-btn" data-animation=false title="quarter">Q</a>
-               <a class="btn btn-mini btn-primary pull-right control-chart-btn" data-animation=false title="month">M</a>
-               <a class="btn btn-mini btn-primary pull-right control-chart-btn" data-animation=false title="week">W</a>
-               <a class="btn btn-mini btn-primary pull-right control-chart-btn active" data-animation=false title="day">D</a>
+               <a class="btn btn-mini btn-primary pull-right control-chart-btn control-chart-btn-last" data-animation=false data-interval="365" data-type="year" title="year">Y</a>
+               <a class="btn btn-mini btn-primary pull-right control-chart-btn" data-animation=false data-interval="90" data-type="quarter" title="quarter">Q</a>
+               <a class="btn btn-mini btn-primary pull-right control-chart-btn" data-animation=false data-interval="30" data-type="month" title="month">M</a>
+               <a class="btn btn-mini btn-primary pull-right control-chart-btn" data-animation=false data-interval="7" data-type="week" title="week">W</a>
+               <a class="btn btn-mini btn-primary pull-right control-chart-btn active" data-animation=false data-interval="1" data-type="day" title="day">D</a>
            </div>
            <div id="container" class="analyze-chart">
            </div>
